# dgp

./: .gitignore  CMakeLists.txt  MANIFEST.in  Makefile  README.md  dgp-simple.c  fingerprint.py  genseed.c  genseed.py  seed_to_hex.py  seed_to_numbers.py  setup.py  short.py  simple.py  simpserver.py  standalone.py
dgp/: factory.py  schema.sql
dgp/blueprints/: dgp.py  engine.py
dgp/static/: faq.html  style.css
dgp/templates/: layout.html  login.html  show_entries.html
tests/: test_dgp.py
